
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef scalar_t__ uint64_t ;
struct skb_shared_info {int tx_flags; scalar_t__ frag_list; scalar_t__ nr_frags; scalar_t__ destructor_arg; } ;
struct TYPE_2__ {unsigned long callback; } ;


 int memset (struct skb_shared_info*,int ,int) ;
 TYPE_1__ ui ;

void init_skb_buffer(char* buffer, unsigned long func) {
 struct skb_shared_info* ssi = (struct skb_shared_info*)buffer;
 memset(ssi, 0, sizeof(*ssi));

 ssi->tx_flags = 0xff;
 ssi->destructor_arg = (uint64_t)&ui;
 ssi->nr_frags = 0;
 ssi->frag_list = 0;

 ui.callback = func;
}
